@@ -1,8 +1,8 @@
 {
   "timestamp" : "2024-10-31T01:44:08Z",
-  "count" : 53,
-  "count_minmax" : [ 53, 128 ],
-  "count_decinc" : [ -75, +128 ],
+  "count" : 127,
+  "count_minmax" : [ 127, 127 ],
+  "count_decinc" : [ -0, +127 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
