@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2024-10-30T01:43:07Z",
-  "count_outdated" : 229890,
-  "uniques_outdated" : 2274,
-  "count" : 231676,
-  "uniques" : 2293,
+  "timestamp" : "2024-10-31T01:44:08Z",
+  "count_outdated" : 230018,
+  "uniques_outdated" : 2275,
+  "count" : 231830,
+  "uniques" : 2295,
   "clones" : [
     {
-      "timestamp": "2024-10-16T00:00:00Z",
+      "timestamp": "2024-10-17T00:00:00Z",
       "count": 53,
       "count_minmax": [ 53, 128 ],
       "count_decinc": [ 75, 128 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
-      "timestamp": "2024-10-17T00:00:00Z",
-      "count": 128,
-      "count_minmax": [ 128, 128 ],
-      "count_decinc": [ 0, 128 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -127,6 +118,24 @@
       "count": 127,
       "count_minmax": [ 27, 127 ],
       "count_decinc": [ 0, 127 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-10-30T00:00:00Z",
+      "count": 127,
+      "count_minmax": [ 127, 127 ],
+      "count_decinc": [ 0, 127 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-10-31T00:00:00Z",
+      "count": 27,
+      "count_minmax": [ 27, 27 ],
+      "count_decinc": [ 0, 27 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
